# CIS194

./: .gitignore  README.org  index.html  problem-on-streams.txt  wholemeal-example-sudoku.lhs
byorgey/: README.org  link.txt
byorgey/haskell/: .ghci  .gitignore  README.org  cis194.cabal
byorgey/haskell/2014/src/: Hw02_LogAnalysis.hs  Hw03_Golf.hs  Hw05.hs  Hw07_Editor.hs  Hw07_Scrabble.hs  Hw11_AParser.hs  StackVM.hs
byorgey/haskell/2015/benchmark/: Bench.hs
byorgey/haskell/2015/src/: Cis194.hs
byorgey/haskell/2015/src/Cis194/: Hw04.hs  Hw07_JoinList.hs  Log.hs  Parser.hs
byorgey/haskell/2015/test/: DocTest.hs  Spec.hs  hpc.hs  unittest.hs
byorgey/haskell/2015/test/Cis194/: Hw01Spec.hs  Hw02UnitTest.hs  Hw03Spec.hs  Hw03UnitTest.hs  Hw05UnitTest.hs
byorgey/haskell/2016/: HLint.hs  LICENSE  cis194.cabal  ghci.hs  module-structure.dot  runTest.sh
byorgey/haskell/2016/src/: Cis194.hs
byorgey/haskell/2016/src/Cis194/: Hw01.hs  Hw02.hs  Hw03.hs
byorgey/haskell/2016/src/Cis194/Hw02/: Log.hs  LogAnalysis.hs
byorgey/haskell/2016/src/Cis194/Hw03/: Golf.hs
byorgey/haskell/2016/src/Cis194/Hw04/: HigherOrder.hs
byorgey/haskell/2016/src/Cis194/Hw05/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs
byorgey/haskell/2016/src/Cis194/Hw06/: Fibonacci.hs
byorgey/haskell/2016/src/Cis194/Hw07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
byorgey/haskell/2016/src/Cis194/Hw08/: Employee.hs  Party.hs
byorgey/haskell/2016/src/Cis194/Hw10/: AParser.hs
byorgey/haskell/2016/src/Cis194/Hw11/: AParser.hs  SExpr.hs
byorgey/haskell/2016/src/Cis194/Hw12/: Risk.hs
byorgey/haskell/2016/src/main/: Doctest.hs
byorgey/haskell/2016/test/: Doctest.hs  SpecHelper.hs  Test.hs  Unittest.hs
byorgey/haskell/2016/test/Cis194/: Test.hs
byorgey/haskell/2016/test/Cis194/Hw01/: HSpec.hs  UTest.hs
byorgey/haskell/2016/test/Cis194/Hw02/: LogAnalysisUTest.hs  UTest.hs
byorgey/haskell/2016/test/Cis194/Hw03/: GolfSpec.hs
byorgey/haskell/2016/test/Cis194/Hw07/: JoinListTest.hs
byorgey/haskell/2016/test/Cis194/Hw08/: PartyTest.hs
byorgey/haskell/2016/test/Cis194/Hw10/: AParserTest.hs
byorgey/haskell/2016/test/Cis194/Hw11/: SExprTest.hs
byorgey/haskell/app/: Main.hs
byorgey/haskell/benchmark/: Cis194Bench.hs
byorgey/haskell/benchmark/Cis194/: Hw01Bench.hs
byorgey/haskell/src/: Cis194.hs  Hw01.hs
byorgey/haskell/src/Cis194/: ExprT.hs  Hw01.hs  Hw02_LogAnalysis.hs  Hw03_Golf.hs  Hw04.hs  Hw05_Calc.hs  Hw06_Fibonacci.hs  Hw07_Scrabble.hs  Parser.hs  StackVM.hs  VarExprT.hs
byorgey/haskell/test/: DocTest.hs  Spec.hs  unittest.hs
byorgey/haskell/test/Cis194/: Hw02Spec.hs  Hw02UnitTest.hs  Hw04UnitTest.hs  Hw05UnitTest.hs
byorgey/homeworks/: #hw5.hs#  ExprT.hs  Hw07_JoinList.hs  Hw07_Scrabble.hs  Hw07_Sized.hs  Hw07_StringBuffer.hs  hw5.hs  hw5tests.hs  hw6.hs
byorgey/homeworks/2013/: week1.hs  week2.hs
byorgey/homeworks/haskell/: Hw01.hs  Hw07_JoinList.hs  Hw07_Sized.hs  README.org  cis194.cabal
byorgey/homeworks/haskell-01/: haskell01.cabal
byorgey/homeworks/haskell-01/src/: Main.hs
byorgey/homeworks/haskell/.cabal-sandbox11/i386-windows-ghc-7.6.3-packages.conf.d/: cis194-eisenberg-0.1.0.0-98a0b2a3cebf6b2c4652b8b9673f55b0.conf  package.cache
byorgey/homeworks/haskell/2014/src/: Hw07_JoinList.hs  Hw10_AParser.hs
byorgey/homeworks/haskell/dist11/dist-sandbox-5e4655d6/: package.conf.inplace  setup-config
byorgey/homeworks/haskell/src/: Hw01.hs  Hw04.hs  Hw06.hs  Hw07_Buffer.hs  Hw07_JoinList.hs  Hw07_JoinListEditor.hs  Hw07_Scrabble.hs  Hw07_StringBufEditor.hs  Hw08_Employee.hs  Hw10_AParser.hs  Hw11_SExpr.hs  Hw12_Risk.hs  Log.hs  Main.hs  hw4.hs  hw6.hs
byorgey/racket/2016/: Hw01.rkt
byorgey/racket/2016/Hw06/: Fibonacci.rkt
homeworks/: hw1-fold-practice.hs  hw1.hs  hw2.hs  hw3.hs  hw5.hs  hw5tests.hs
homeworks/2013/: week3.hs
reisenberg/: link.txt
reisenberg/homework/haskell/: LICENSE  cabal.sandbox.config  cis194-eisenberg.cabal
reisenberg/homework/haskell/src/: HW01.hs  Hw02.hs  Hw02_Words.hs  Hw03.hs  Hw03Log.hs  Hw04.hs  Hw04_BST.hs  Hw05.hs  Hw05_Parser.hs  Hw05_Ring.hs  Hw06.hs  Main.hs
