name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mymoocs/CIS194/
license:             BSD3
license-file:        LICENSE
author:              Arthur Vardanyan
maintainer:          artie.vard@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cis194
                       Cis194.Hw01
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cis194-exe
  hs-source-dirs:      app,src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec      >=2.0
                     , QuickCheck >=2.8
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite cis194-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest    >=0.10.0
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  build-depends:       base
                     , cis194
                     , criterion >= 1.1.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mymoocs/CIS194
