name:                cis194
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/arthurvard/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur
maintainer:          artie.vard@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Cis194
  other-modules:     Cis194.Hw01
  build-depends:     base >= 4.7 && < 5


executable cis194
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cis194

test-suite cis194-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite cis194-hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec      >=2.0
                     , QuickCheck >=2.8
                     , cis194
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite cis194-unittest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             utest.hs
  build-depends:       base
                     , cis194
                     , HUnit >= 1.2.5.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
