name:                cis194
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/arthurvard/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur
maintainer:          artie.vard@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   Cis194
  other-modules:     Cis194.Hw01
                   , Cis194.Hw02
                   , Cis194.Hw02.Log
                   , Cis194.Hw02.LogAnalysis
                   , Cis194.Hw03.Golf
                   , Cis194.Hw07.JoinList
                   , Cis194.Hw07.Sized
                   , Cis194.Hw08.Employee
                   , Cis194.Hw08.Party
                   , Cis194.Hw10.AParser
                   , Cis194.Hw11.SExpr
  build-depends:     base >= 4.7 && < 5
                   , mtl
                   , MonadRandom
                   , containers
  default-language:  Haskell2010

executable cis194
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , cis194
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite cis194-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Doctest.hs

  build-depends:       base >= 4.7 && < 5
                     , cis194
                     , containers
                     , doctest
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite cis194-testy
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       SpecHelper
                     , Cis194.Hw01.HSpec
                     , Cis194.Hw03.GolfSpec
  build-depends:       base
                     , tasty >= 0.7
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , containers
                     , cis194
--   ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite cis194-hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SpecHelper
                     , Cis194.Hw01.HSpec
                     , Cis194.Hw03.GolfSpec
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , cis194
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite cis194-unittest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Unittest.hs
  other-modules:       Cis194.Test
                     , Cis194.Hw01.UTest
                     , Cis194.Hw02.LogAnalysisUTest
                     , Cis194.Hw03.GolfSpec
  build-depends:       base
                     , cis194
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
